# pkghall

./: .gitignore  .pre-commit-hooks.yaml  README.md  pyproject.toml
.github/workflows/: ci.yml
pkghall/: aliases.py  checker.py  cli.py  parser.py  watcher.py
tests/: test_checker.py  test_edge_cases.py  test_parser.py
tests/fixtures/: bad_requirements.txt  good_requirements.txt  sample_ai_code.py
