[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "pkghall"
version = "0.1.0"
description = "Detect hallucinated (non-existent) packages in AI-generated code"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.11"
keywords = ["ai", "llm", "security", "packages", "hallucination", "slopsquatting"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Security",
    "Topic :: Software Development :: Quality Assurance",
]
dependencies = [
    "click>=8.1",
    "httpx>=0.27",
    "rich>=13.0",
]

[project.urls]
Homepage = "https://github.com/wjddusrb03/pkghall"
Repository = "https://github.com/wjddusrb03/pkghall"
Issues = "https://github.com/wjddusrb03/pkghall/issues"

[project.scripts]
pkghall = "pkghall.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["pkghall"]

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
    "integration: tests that make real network requests (deselect with -m 'not integration')",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]

[tool.mypy]
python_version = "3.11"
strict = true
